// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adapter can fetch bed with header 1`] = `
Array [
  Object {
    "end": 3009,
    "refName": "contigA",
    "start": 3000,
    "strand": 0,
    "uniqueId": "test-163098",
  },
  Object {
    "end": 3114,
    "refName": "contigA",
    "start": 3105,
    "strand": 0,
    "uniqueId": "test-163116",
  },
  Object {
    "end": 3161,
    "refName": "contigA",
    "start": 3152,
    "strand": 0,
    "uniqueId": "test-163134",
  },
  Object {
    "end": 3180,
    "refName": "contigA",
    "start": 3171,
    "strand": 0,
    "uniqueId": "test-163152",
  },
  Object {
    "end": 3183,
    "refName": "contigA",
    "start": 3174,
    "strand": 0,
    "uniqueId": "test-163170",
  },
  Object {
    "end": 3222,
    "refName": "contigA",
    "start": 3213,
    "strand": 0,
    "uniqueId": "test-163188",
  },
  Object {
    "end": 3474,
    "refName": "contigA",
    "start": 3465,
    "strand": 0,
    "uniqueId": "test-163206",
  },
  Object {
    "end": 3804,
    "refName": "contigA",
    "start": 3795,
    "strand": 0,
    "uniqueId": "test-163224",
  },
  Object {
    "end": 4044,
    "refName": "contigA",
    "start": 4035,
    "strand": 0,
    "uniqueId": "test-163242",
  },
  Object {
    "end": 4082,
    "refName": "contigA",
    "start": 4073,
    "strand": 0,
    "uniqueId": "test-163260",
  },
]
`;

exports[`adapter can fetch features bed with autosql 1`] = `
Array [
  Object {
    "Entrez_Gene_Id": "2782",
    "Hugo_Symbol": "GNB1",
    "Matched_Norm_Sample_Barcode": "TCGA-OR-A5KB-11A-11D-A30A-10",
    "Reference_Allele": "T",
    "Tumor_Sample_Barcode": "TCGA-OR-A5KB-01A-11D-A30A-10",
    "Tumor_Seq_Allele1": "T",
    "Tumor_Seq_Allele2": "G",
    "Variant_Classification": "Splice_Region",
    "Variant_Type": "SNP",
    "alcohol_history": "--",
    "alcohol_intensity": "--",
    "bmi": "--",
    "case_id": "09454ed6-64bc-4a35-af44-7c4344623d45",
    "cigarettes_per_day": "--",
    "days_to_death": "--",
    "dbSNP_RS": "novel",
    "dbSNP_Val_Status": "",
    "end": 10,
    "ethnicity": "not hispanic or latino",
    "freq": "0.0108695652174",
    "gender": "female",
    "height": "--",
    "name": "T>G",
    "project_id": "TCGA-ACC",
    "refName": "ctgA",
    "reserved": "0,0,0",
    "sampleCount": "1",
    "score": 1,
    "start": 1,
    "strand": 0,
    "subfeatures": Array [
      Object {
        "end": 2,
        "parentId": "test-52985",
        "start": 1,
        "strand": 0,
        "type": "three_prime_UTR",
        "uniqueId": "test-52985-0",
      },
    ],
    "type": "mRNA",
    "uniqueId": "test-52985",
    "weight": "--",
    "years_smoked": "--",
  },
]
`;

exports[`adapter can fetch features from volvox.sort.bed.gz simple bed3 1`] = `
Array [
  Object {
    "end": 3009,
    "refName": "contigA",
    "start": 3000,
    "strand": 0,
    "uniqueId": "test-155162",
  },
  Object {
    "end": 3114,
    "refName": "contigA",
    "start": 3105,
    "strand": 0,
    "uniqueId": "test-155180",
  },
  Object {
    "end": 3161,
    "refName": "contigA",
    "start": 3152,
    "strand": 0,
    "uniqueId": "test-155198",
  },
  Object {
    "end": 3180,
    "refName": "contigA",
    "start": 3171,
    "strand": 0,
    "uniqueId": "test-155216",
  },
  Object {
    "end": 3183,
    "refName": "contigA",
    "start": 3174,
    "strand": 0,
    "uniqueId": "test-155234",
  },
  Object {
    "end": 3222,
    "refName": "contigA",
    "start": 3213,
    "strand": 0,
    "uniqueId": "test-155252",
  },
  Object {
    "end": 3474,
    "refName": "contigA",
    "start": 3465,
    "strand": 0,
    "uniqueId": "test-155270",
  },
  Object {
    "end": 3804,
    "refName": "contigA",
    "start": 3795,
    "strand": 0,
    "uniqueId": "test-155288",
  },
  Object {
    "end": 4044,
    "refName": "contigA",
    "start": 4035,
    "strand": 0,
    "uniqueId": "test-155306",
  },
  Object {
    "end": 4082,
    "refName": "contigA",
    "start": 4073,
    "strand": 0,
    "uniqueId": "test-155324",
  },
]
`;

exports[`adapter can fetch features from volvox-bed12.bed.gz 1`] = `
Array [
  Object {
    "end": 9000,
    "itemRgb": "0,0,0",
    "name": "EDEN.1",
    "refName": "ctgA",
    "score": 1000,
    "start": 1049,
    "strand": 1,
    "subfeatures": Array [
      Object {
        "end": 1200,
        "parentId": "test-45689",
        "start": 1049,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "test-45689-0",
      },
      Object {
        "end": 1500,
        "parentId": "test-45689",
        "start": 1200,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45689-1",
      },
      Object {
        "end": 3902,
        "parentId": "test-45689",
        "start": 2999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45689-2",
      },
      Object {
        "end": 5500,
        "parentId": "test-45689",
        "start": 4999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45689-3",
      },
      Object {
        "end": 7608,
        "parentId": "test-45689",
        "start": 6999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45689-4",
      },
      Object {
        "end": 9000,
        "parentId": "test-45689",
        "start": 7608,
        "strand": 1,
        "type": "three_prime_UTR",
        "uniqueId": "test-45689-5",
      },
    ],
    "type": "mRNA",
    "uniqueId": "test-45689",
  },
  Object {
    "end": 9000,
    "itemRgb": "0,0,0",
    "name": "EDEN.2",
    "refName": "ctgA",
    "score": 1000,
    "start": 1049,
    "strand": 1,
    "subfeatures": Array [
      Object {
        "end": 1200,
        "parentId": "test-45786",
        "start": 1049,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "test-45786-0",
      },
      Object {
        "end": 1500,
        "parentId": "test-45786",
        "start": 1200,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45786-1",
      },
      Object {
        "end": 5500,
        "parentId": "test-45786",
        "start": 4999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45786-2",
      },
      Object {
        "end": 7608,
        "parentId": "test-45786",
        "start": 6999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45786-3",
      },
      Object {
        "end": 9000,
        "parentId": "test-45786",
        "start": 7608,
        "strand": 1,
        "type": "three_prime_UTR",
        "uniqueId": "test-45786-4",
      },
    ],
    "type": "mRNA",
    "uniqueId": "test-45786",
  },
  Object {
    "end": 9000,
    "itemRgb": "0,0,0",
    "name": "EDEN.3",
    "refName": "ctgA",
    "score": 1000,
    "start": 1299,
    "strand": 1,
    "subfeatures": Array [
      Object {
        "end": 1500,
        "parentId": "test-45874",
        "start": 1299,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "test-45874-0",
      },
      Object {
        "end": 3300,
        "parentId": "test-45874",
        "start": 2999,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "test-45874-1",
      },
      Object {
        "end": 3902,
        "parentId": "test-45874",
        "start": 3300,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45874-2",
      },
      Object {
        "end": 5500,
        "parentId": "test-45874",
        "start": 4999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45874-3",
      },
      Object {
        "end": 7600,
        "parentId": "test-45874",
        "start": 6999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45874-4",
      },
      Object {
        "end": 9000,
        "parentId": "test-45874",
        "start": 7600,
        "strand": 1,
        "type": "three_prime_UTR",
        "uniqueId": "test-45874-5",
      },
    ],
    "type": "mRNA",
    "uniqueId": "test-45874",
  },
  Object {
    "end": 23000,
    "itemRgb": "0,0,0",
    "name": "rna-Apple3",
    "refName": "ctgA",
    "score": 1000,
    "start": 17399,
    "strand": 1,
    "subfeatures": Array [
      Object {
        "end": 17999,
        "parentId": "test-45971",
        "start": 17399,
        "strand": 1,
        "type": "five_prime_UTR",
        "uniqueId": "test-45971-0",
      },
      Object {
        "end": 18800,
        "parentId": "test-45971",
        "start": 17999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45971-1",
      },
      Object {
        "end": 19500,
        "parentId": "test-45971",
        "start": 18999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45971-2",
      },
      Object {
        "end": 21200,
        "parentId": "test-45971",
        "start": 20999,
        "strand": 1,
        "type": "CDS",
        "uniqueId": "test-45971-3",
      },
      Object {
        "end": 23000,
        "parentId": "test-45971",
        "start": 21200,
        "strand": 1,
        "type": "three_prime_UTR",
        "uniqueId": "test-45971-4",
      },
    ],
    "type": "mRNA",
    "uniqueId": "test-45971",
  },
]
`;

exports[`adapter can use gwas header 1`] = `Array []`;
